refonte des tags (ce n'est plus un select) et commencement du JS) q

--- a/stylesheets/base/_base.scss
+++ b/stylesheets/base/_base.scss
@@ -33,7 +33,7 @@ a {
 		text-decoration: underline;
 	}
 }
-/* ul,
+ul,
 li,
 p,
 h1,
@@ -55,4 +55,4 @@ html {
 	text-decoration: none;
 	margin: 0;
 	padding: 0;
-} */
+}
