--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -342,7 +342,7 @@ a:hover, a:active, a:focus, a:focus-within {
   text-decoration: underline;
 }
 
-/* ul,
+ul,
 li,
 p,
 h1,
@@ -360,11 +360,12 @@ footer,
 a,
 body,
 html {
-	list-style-type: none;
-	text-decoration: none;
-	margin: 0;
-	padding: 0;
-} */
+  list-style-type: none;
+  text-decoration: none;
+  margin: 0;
+  padding: 0;
+}
+
 /**
  * Basic typography style for copy text
  */
@@ -496,30 +497,63 @@ header #search-form #search-button i:hover {
   color: #1b1b1b;
 }
 
-.selects {
-  width: 195px;
-  height: 56px;
-  font-family: "Manrope", sans-serif;
-  font-weight: 500;
-  color: #1b1b1b;
-  margin-right: 100px;
-  font-size: 16px;
-  padding-left: 10px;
+#top-bar {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+#top-bar .tags-section {
   background-color: white;
-  border-radius: 10px;
-  border: none;
-  -moz-appearance: none; /* Firefox */
-  -webkit-appearance: none; /* Safari and Chrome */
-  appearance: none;
+  border-radius: 11px;
+  font-family: "Manrope", sans-serif;
+  font-size: 18px;
+  font-weight: 400;
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+  width: 230px;
+}
+#top-bar .title-dropdownbtn-container {
+  display: flex;
+  flex-direction: row;
+  padding: 10px;
+  position: relative;
+}
+#top-bar .title-dropdownbtn-container h3 {
+  font-family: "Manrope", sans-serif;
+  font-size: 20px;
+  font-weight: 500;
+  position: relative;
+}
+#top-bar .title-dropdownbtn-container button {
   background-image: url("/img/arrow-select.png");
   background-repeat: no-repeat;
-  background-position: 160px 25px;
+  background-position: center;
+  height: 15px;
+  width: 20px;
+  border: none;
+  background-color: transparent;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  right: 10px;
   cursor: pointer;
 }
-.selects option {
-  border: none;
-  outline: none;
-  border-radius: 10px;
+#top-bar input {
+  margin: 10px;
+  display: none;
+}
+#top-bar ul {
+  display: flex;
+  flex-direction: column;
+  display: none;
+}
+#top-bar ul li {
+  padding: 10px;
+}
+#top-bar ul li:hover {
+  background-color: #ffd15b;
+  cursor: pointer;
 }
 
 .card {
