--- a/stylesheets/main.scss
+++ b/stylesheets/main.scss
@@ -13,7 +13,7 @@
 @import "layout/header", "layout/footer";
 
 // 5. Components
-@import "components/button", "components/select", "components/card";
+@import "components/button", "components/tags", "components/card";
 
 // 6. Page-specific styles
 @import "pages/home";
