--- a/stylesheets/pages/_home.scss
+++ b/stylesheets/pages/_home.scss
@@ -25,9 +25,10 @@ body {
 #cards-container {
 	display: flex;
 	flex-direction: row;
-	justify-content: space-between;
+	justify-content: flex-start;
 	margin-top: 35px;
 	gap: 30px;
+	flex-wrap: wrap;
 	#recette-description {
 		color: black;
 	}
