--- a/stylesheets/components/_card.scss
+++ b/stylesheets/components/_card.scss
@@ -32,6 +32,24 @@
 			margin: 0;
 			font-size: 14px;
 			color: black;
+			display: -webkit-box;
+			-webkit-box-orient: vertical;
+			-webkit-line-clamp: 5;
+			overflow: hidden;
+			transition: all 0.4s;
+		}
+		.readmore-button {
+			width: 80px;
+			font-size: 15px;
+			font-family: $manrop;
+			margin-top: 10px;
+			border-radius: 0;
+			border: none;
+			background-color: $yellow;
+			cursor: pointer;
+			color: black;
+			padding: 3px;
+			align-self: flex-end;
 		}
 		.ingredients-container {
 			display: flex;
@@ -49,9 +67,18 @@
 					margin-bottom: 5px;
 				}
 				p {
-					margin: 0;
-					color: $grey;
+					font-family: $manrop;
 					font-size: 14px;
+					font-weight: 500;
+					letter-spacing: 0em;
+					margin: 0;
+					margin-bottom: 5px;
+
+					&:last-child {
+						margin: 0;
+						color: $grey;
+						font-size: 14px;
+					}
 				}
 			}
 		}
