--- a/stylesheets/components/_card.scss
+++ b/stylesheets/components/_card.scss
@@ -1,5 +1,7 @@
 .card {
 	width: 31%;
+	min-width: 150px;
+	max-width: 400px;
 	border-radius: 20px;
 	overflow: hidden;
 	background-color: white;
@@ -58,7 +60,7 @@
 				width: 40%;
 				margin-right: 15px;
 				margin-bottom: 20px;
-				h4 {
+				.ingredient-name {
 					font-family: $manrop;
 					font-size: 14px;
 					font-weight: 500;
@@ -66,13 +68,14 @@
 					margin: 0;
 					margin-bottom: 5px;
 				}
-				p {
+				.quantity-unit {
 					font-family: $manrop;
 					font-size: 14px;
 					font-weight: 500;
 					letter-spacing: 0em;
 					margin: 0;
 					margin-bottom: 5px;
+					color: $grey;
 				}
 			}
 		}
