--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -566,6 +566,8 @@ header #search-form #search-button i {
 
 .card {
   width: 31%;
+  min-width: 150px;
+  max-width: 400px;
   border-radius: 20px;
   overflow: hidden;
   background-color: white;
@@ -629,7 +631,7 @@ header #search-form #search-button i {
   margin-right: 15px;
   margin-bottom: 20px;
 }
-.card .card-description .ingredients-container .ingredient h4 {
+.card .card-description .ingredients-container .ingredient .ingredient-name {
   font-family: "Manrope", sans-serif;
   font-size: 14px;
   font-weight: 500;
@@ -637,13 +639,14 @@ header #search-form #search-button i {
   margin: 0;
   margin-bottom: 5px;
 }
-.card .card-description .ingredients-container .ingredient p {
+.card .card-description .ingredients-container .ingredient .quantity-unit {
   font-family: "Manrope", sans-serif;
   font-size: 14px;
   font-weight: 500;
   letter-spacing: 0em;
   margin: 0;
   margin-bottom: 5px;
+  color: #7a7a7a;
 }
 
 body {
