--- a/stylesheets/components/_card.scss
+++ b/stylesheets/components/_card.scss
@@ -5,11 +5,23 @@
 	border-radius: 20px;
 	overflow: hidden;
 	background-color: white;
+
 	img {
 		width: 100%;
 		height: 253px;
 		object-fit: cover;
 		display: block;
+	}
+	.time-recipe {
+		background-color: $yellow;
+		position: absolute;
+		right: 30px;
+		top: 20px;
+		border-radius: 90px;
+		font-size: 15px;
+		font-family: $manrop;
+		color: #1b1b1b;
+		padding: 5px 10px;
 	}
 	.card-description {
 		padding: 25px;
@@ -34,11 +46,12 @@
 			margin: 0;
 			font-size: 14px;
 			color: black;
-			display: -webkit-box;
+			/* display: -webkit-box;
 			-webkit-box-orient: vertical;
 			-webkit-line-clamp: 5;
-			overflow: hidden;
-			transition: all 0.4s;
+			overflow: hidden; */
+			max-height: 80px;
+			overflow-y: hidden;
 		}
 		.readmore-button {
 			width: 80px;
