starting appliance tags, new function created in utils.js getApplianceList

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -514,7 +514,7 @@ header #search-form #search-button i {
   width: 230px;
   position: absolute;
 }
-#top-bar #appareils {
+#top-bar #appliance {
   left: 50%;
   transform: translateX(-50%);
 }
