--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -518,7 +518,7 @@ header #search-form #search-button i {
   left: 50%;
   transform: translateX(-50%);
 }
-#top-bar #ustensiles {
+#top-bar #ustensils {
   right: 0;
 }
 #top-bar .title-dropdownbtn-container {
@@ -547,16 +547,28 @@ header #search-form #search-button i {
   right: 10px;
   cursor: pointer;
 }
-#top-bar input {
-  margin: 10px;
+#top-bar form {
   display: none;
+  position: relative;
+}
+#top-bar form input {
+  margin: 10px;
   border: none;
   outline: 1px solid grey;
   padding: 10px;
+  width: calc(100% - 20px);
 }
-#top-bar input:focus {
+#top-bar form input:focus {
   border: none;
   outline: 1px solid grey;
+}
+#top-bar form i {
+  position: absolute;
+  right: 25px;
+  top: 50%;
+  transform: translateY(-50%);
+  font-size: 20px;
+  cursor: pointer;
 }
 #top-bar .tags-container {
   display: flex;
