--- a/stylesheets/components/_tags.scss
+++ b/stylesheets/components/_tags.scss
@@ -1,24 +1,20 @@
-#top-bar {
+#filter-bar {
 	position: relative;
 	z-index: 10;
+	display: flex;
+	justify-content: space-between;
+	#recettes-number {
+		line-height: 48px;
+	}
 	.tags-section {
 		background-color: white;
 		border-radius: 11px;
 		font-family: $manrop;
 		font-size: 18px;
 		font-weight: 400;
-		display: flex;
-		flex-direction: column;
 		overflow: hidden;
 		width: 230px;
-		position: absolute;
-	}
-	#appliance {
-		left: 50%;
-		transform: translateX(-50%);
-	}
-	#ustensils {
-		right: 0;
+		height: 48px;
 	}
 	.title-dropdownbtn-container {
 		display: flex;
@@ -29,7 +25,6 @@
 			font-family: $manrop;
 			font-size: 20px;
 			font-weight: 500;
-			position: relative;
 		}
 		button {
 			background-image: url("/img/arrow-select.png");
@@ -49,7 +44,6 @@
 	form {
 		display: none;
 		position: relative;
-
 		input {
 			margin: 10px;
 			border: none;
