--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -498,42 +498,37 @@ header #search-form #search-button i {
   line-height: 54px;
 }
 
-#top-bar {
+#filter-bar {
   position: relative;
   z-index: 10;
+  display: flex;
+  justify-content: space-between;
 }
-#top-bar .tags-section {
+#filter-bar #recettes-number {
+  line-height: 48px;
+}
+#filter-bar .tags-section {
   background-color: white;
   border-radius: 11px;
   font-family: "Manrope", sans-serif;
   font-size: 18px;
   font-weight: 400;
-  display: flex;
-  flex-direction: column;
   overflow: hidden;
   width: 230px;
-  position: absolute;
+  height: 48px;
 }
-#top-bar #appliance {
-  left: 50%;
-  transform: translateX(-50%);
-}
-#top-bar #ustensils {
-  right: 0;
-}
-#top-bar .title-dropdownbtn-container {
+#filter-bar .title-dropdownbtn-container {
   display: flex;
   flex-direction: row;
   padding: 10px;
   position: relative;
 }
-#top-bar .title-dropdownbtn-container h3 {
+#filter-bar .title-dropdownbtn-container h3 {
   font-family: "Manrope", sans-serif;
   font-size: 20px;
   font-weight: 500;
-  position: relative;
 }
-#top-bar .title-dropdownbtn-container button {
+#filter-bar .title-dropdownbtn-container button {
   background-image: url("/img/arrow-select.png");
   background-repeat: no-repeat;
   background-position: center;
@@ -547,22 +542,22 @@ header #search-form #search-button i {
   right: 10px;
   cursor: pointer;
 }
-#top-bar form {
+#filter-bar form {
   display: none;
   position: relative;
 }
-#top-bar form input {
+#filter-bar form input {
   margin: 10px;
   border: none;
   outline: 1px solid grey;
   padding: 10px;
   width: calc(100% - 20px);
 }
-#top-bar form input:focus {
+#filter-bar form input:focus {
   border: none;
   outline: 1px solid grey;
 }
-#top-bar form i {
+#filter-bar form i {
   position: absolute;
   right: 25px;
   top: 50%;
@@ -570,17 +565,17 @@ header #search-form #search-button i {
   font-size: 20px;
   cursor: pointer;
 }
-#top-bar .tags-container {
+#filter-bar .tags-container {
   display: flex;
   flex-direction: column;
   display: none;
   height: 230px;
   overflow-y: scroll;
 }
-#top-bar .tags-container li {
+#filter-bar .tags-container li {
   padding: 10px;
 }
-#top-bar .tags-container li:hover {
+#filter-bar .tags-container li:hover {
   background-color: #ffd15b;
   cursor: pointer;
 }
