--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -574,6 +574,14 @@ header #search-form #search-button i {
 }
 #filter-bar .tags-container li {
   padding: 10px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+#filter-bar .tags-container li img {
+  height: 17px;
+  width: 17px;
+  margin-right: 5px;
 }
 #filter-bar .tags-container li:hover {
   background-color: #ffd15b;
