--- a/stylesheets/components/_tags.scss
+++ b/stylesheets/components/_tags.scss
@@ -118,6 +118,17 @@
 			padding: 10px;
 			line-height: 24px;
 			margin-bottom: 10px;
+			display: flex;
+			justify-content: space-between;
+			align-items: center;
+			font-family: $manrop;
+			font-size: 17px;
+			img {
+				width: 13px;
+				height: 13px;
+				margin-right: 5px;
+				cursor: pointer;
+			}
 		}
 	}
 }
